# algorithms

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
examples/: genetic_neural_classification.ipynb  genetic_tsp.ipynb  geometry.ipynb  network_plotter.ipynb  pygame_test.py  shapely_speed_benchmark.py
genalg/: crossover.py  disaster.py  ga.py  selection.py
geometry/intersect/: __init__.py
geometry/tools/: getinfo.py
neuralnetwork/: neural_network.py
src/algorithms/genalg/: ga.py  mutation.py
src/algorithms/geometry/: shapes.py
src/algorithms/geometry/contains/: point.py
src/algorithms/geometry/intersect/: boolean.py  position.py
src/algorithms/geometry/tools/: __init__.py  test.py  transform.py
src/algorithms/neural/: neural_network.py  nn.py  plotting.py
