[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
version = "0.1.0"
description = "Agorithms for Python hobby projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1",
    "matplotlib>=3.9.3",
    "numba>=0.64.0",
    "tqdm>=4.67",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
